2019-01-21 Scott Bartell
  * DESCRIPTION (Version): New version is 1.2-4

  * R/plot.modgam.R:  Fixed error in plot.modgam function associated with new "anchor"
  argument, now implemented in both plot.modgam and colormap. 
   
  * R/gamcox.fit.R:  Truncated step sizes (deltaeta) at -3 and 3 in order to avoid 
  potential problems. Also added warning message when final model deviance is higher 
  than deviance for a model using the same linear predictors and no smooth, and error
  check for infinite values in eta.      

  * R/optspan and R/gamcox:  Fixed same error in both functions--had sometimes 
  failed to identify the variables in the two-dimesional smooth, occasionally
  resulting in fatal error messages. 

  * R/gamcox:  replaced identical with all.equal to avoid spurious warning/error 
  when comparing two real values (span and spanf).      

2018-07-24 Scott Bartell
  * DESCRIPTION (Version): New version is 1.2

  * R/colormap.R:  fixed error with double printing of y axis label when axes=TRUE,
  and added a new argument "anchor", with a default of anchor=F (the original method).  
  Anchoring the color scale bar to the referent value is now only performed when 
  legend.add.line is specified and anchor=T.

2018-04-09 Lu Bai and Scott Bartell
  * DESCRIPTION (Version): New version is 1.1

  * R/summary.modgam.R: changed class check from "gam" to "Gam" to accomodate class
  name change from the gam library (starting with gam version 1.15).  

  * R/mypredict.gam.R: corrected error in dispersion parameter estimation for 
  quasibinomial and quasipoisson families.  Special thanks to Fabian Camacho,
  University of Virginia, for noticing the problem.   
  
  * R/colormap.R, R/plot.modgam.R: several modifications: new arugment allows
  users to specify any color palette, default palette for plot.modgam is changed to
  a divergent palette, new colormap help file example compares palettes, the color