@@ -1,8 +1,8 @@
-e158e47a8b8a585e1d7be48ba1f39d1d *ChangeLog
-11c193ba649b6904d9cf61c76f2cc6d1 *DESCRIPTION
+d2f90aec1d23cbc5a6210dff11b7a93f *ChangeLog
+aa86ef91139bc2b0e1cd9330f4b783be *DESCRIPTION
 f0d0063866601480f079c21b26e63c0f *NAMESPACE
 9b8b73db80de16a79045de94643ff69f *R/AIC.modgam.R
-e373754f94693373874d52955fe12ca6 *R/MapGAM.version.R
+050c48e4e9604d738aac7065d688a4a9 *R/MapGAM.version.R
 7e13153c8ae594307e74a815cd5b2fa1 *R/coef.gamcox.R
 d717b010fce5ea885b1d2998819fb1da *R/coef.modgam.R
 146e12243dfad18030fdddf9e4f75b96 *R/colormap.R
@@ -11,10 +11,10 @@ d717b010fce5ea885b1d2998819fb1da *R/coef.modgam.R
 68be2bb7e901b6ab4725fd6cd42366f7 *R/formula.modgam.R
 ea35feba0042b55988bfa010ec225408 *R/gamcox.R
 367af466b8a094a4cadf4f17aea6109c *R/gamcox.fit.R
-827a9b1b9e80ced921ced8e950db8856 *R/modgam.R
-160020333523b7cb1fa5be794b516f74 *R/mypredict.gam.R
+f073d43220643d66d1a496e4a43b580d *R/modgam.R
+45afc87839da3e17676cafb5ab6345d2 *R/mypredict.gam.R
 e48d18bbdb6c1d7dd4cc20683300ec46 *R/optspan.R
-b70695bc3f37567f7316d98c74a621cf *R/plot.modgam.R
+60ca096e8968f9a0bca7636a5bb5761f *R/plot.modgam.R
 0932b9d6632f73fcdfd9e98cd7452404 *R/predgrid.R
 efdfb71fff157e77a4850b4d5f53aa91 *R/predict.gamcox.R
 f00f825a85c59a161d157d27515f6faf *R/print.gamcox.R
@@ -39,7 +39,7 @@ a4d344358128e5298ef536d98d46e8cd *man/AIC.modgam.Rd
 0e5177b8cff84007eb9a1706ff005c47 *man/CAmap.Rd
 1fa4d47243e93703e36e4f85bc1a55d4 *man/MAdata.Rd
 e338a9c517a400613997ab8cc573bf53 *man/MAmap.Rd
-30c957dda0cfd2b01a1ae783f21cb1f8 *man/MapGAM-package.Rd
+dc160db1cb7640a5fd87cf29c286ab07 *man/MapGAM-package.Rd
 80045605a66d70915515b9f5e05efd48 *man/MapGAM.version.Rd
 949469ecb32a1427b453dcdcc3adb8a8 *man/beertweets.Rd
 af76241aff722a9cec46578df8b49065 *man/coef.gamcox.Rd
@@ -49,11 +49,11 @@ c96e5eba6cffd43ac4daceae8f4b7057 *man/dls.Rd
 6b686065b46f543c65d8c9a4c0677c34 *man/formula.gamcox.Rd
 5dde1ba7bf597c367658fecf56ec4685 *man/formula.modgam.Rd
 fa6e856d47eabc4ce5189d351b75d3bc *man/gamcox.Rd
-6739b4e6a14ab27fcb6be0561b4bab19 *man/modgam.Rd
+1633b616b1dd6c3a07b18f95f0f528ae *man/modgam.Rd
 b8a3e3215052f06eea65cea86c3ca345 *man/mypredict.gam.Rd
 846b0ad3f4a8e34f5fb17c8854a7fbc5 *man/optspan.Rd
 2454c7890e9e666346dcd4ea4762f3cc *man/plot.modgam.Rd
-3a72814a4c0efd7de66e5b3293f3c82b *man/predgrid.Rd
+4774a02d87e9b7a99461e07706920cfc *man/predgrid.Rd
 d0046088944cef86863cca8960fc5845 *man/predict.gamcox.Rd
 3480aee4d5429544d4ab17af23a02966 *man/print.gamcox.Rd
 e735907e624b4e496b0a02df1a14614b *man/print.modgam.Rd
