@@ -61,6 +61,7 @@ points(MAdata$Xcoord,MAdata$Ycoord)
 # But that grid extends beyond the state boundaries and into the ocean!
 # Better to also clip the grid to a map of MA using the following code
 # which requires the PBSmapping package:
+\donttest{
 if (require(PBSmapping)) {
 # Clip a 50x50 grid covering the MA data to a map of MA 
 data(MAmap)
@@ -68,6 +69,7 @@ gamgrid2 <- predgrid(MAdata, map=MAmap, nrow=50, ncol=50)
 # plot the MA map and grid points
 plot(MAmap)
 points(gamgrid2, cex=0.1, col="red")
+}
 }
 }
 
